--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
                                     <i class="icon icon_chat"></i>
                                 </div>
                                 <div class="contact-content">
-                                    <a href="https://zoomnow.net/zntw_zoom_download.php?showType=ALL" target="_blank"><img width="100px" height="px" border="0" alt="加入好友" src="../HOME/assets/images/zoom.png"></a>
+                                    <a href="https://zoomnow.net/zntw_zoom_download.php?showType=ALL" target="_blank"><img width="100px" height="px" border="0" alt="加入好友" src="assets/images/zoom.png"></a>
                                 </div>
                             </div>
                         </div>
