--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
     <meta name="description" content="創新的法律服務，讓律師更了解你的實際需求，持續規劃量身打造的方案，讓你精準依照需求，每人都擁有專屬的律師管家
 " />
-    <meta name="keywords" content="一對一視訊諮詢, 專屬預算客製規劃, 法律社群串聯, 文件線上快速審閱" />
-    <meta name="author" content="ThemeDept">
+    <meta name="keywords" content="法律管家 一對一視訊諮詢 專屬預算客製規劃 法律社群串聯 文件線上快速審閱" />
+    <meta name="author" content="法律管家團隊">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <!-- FAVICON  -->
