--- a/Price/price.html
+++ b/Price/price.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 <head>
-    <meta charset="utf-8">
+    <meta charset="big5">
 
     <!-- TITLE OF SITE -->
-    <title>法律管家 台灣</title>
+    <title>法律管家-設計您的專屬方案</title>
 
-    <meta name="description" content="Responsive Landing Page for Presenting Your Startup: Saas, Mobile or Web Application" />
-    <meta name="keywords" content="smartmvp, startup theme, startup template, startup example, startup landing page, one page, responsive, app landing, html template, mobile application, responsive landing page" />
-    <meta name="author" content="ThemeDept">
+    <meta name="description" content="根據預算選擇方案，也可以針對您的需求設計貼身方案，輕鬆擁有專屬的法律管家" />
+    <meta name="keywords" content="法律管家 一對一視訊諮詢 專屬預算客製規劃 文件線上快速審閱" />
+    <meta name="author" content="法律管家團隊">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <!-- FAVICON  -->
@@ -144,7 +144,7 @@
                             <div class="modal-body">  
                                 <div class="box">
                                      <div class="content">
-                                     <a class="button btn btn-color" href="https://p.ecpay.com.tw/fZRLZ">立即付款去</a>
+                                     <a class="button btn btn-color" href="https://p.ecpay.com.tw/fsDM0">立即付款去</a>
                                      </div>
                                 </div>
                             </div><!-- /End Modal-Body -->
@@ -183,7 +183,7 @@
                             <div class="modal-body">  
                                 <div class="box">
                                      <div class="content">
-                                     <a class="button btn btn-color" href="https://p.ecpay.com.tw/QvLrX">立即付款去</a>
+                                     <a class="button btn btn-color" href="https://p.ecpay.com.tw/LIOvm">立即付款去</a>
                                      </div>
                                 </div>
                             </div><!-- /End Modal-Body -->
@@ -222,7 +222,7 @@
                             <div class="modal-body">  
                                 <div class="box">
                                      <div class="content">
-                                     <a class="button btn btn-color" href="https://p.ecpay.com.tw/UWIDU">立即付款去</a>
+                                     <a class="button btn btn-color" href="https://p.ecpay.com.tw/JG19t">立即付款去</a>
                                      </div>
                                 </div>
                             </div><!-- /End Modal-Body -->
@@ -261,7 +261,7 @@
                             <div class="modal-body">  
                                 <div class="box">
                                      <div class="content">
-                                     <a class="button btn btn-color" href="https://p.ecpay.com.tw/7x31E">立即付款去</a>
+                                     <a class="button btn btn-color" href="https://p.ecpay.com.tw/eiCSA">立即付款去</a>
                                      </div>
                                 </div>
                             </div><!-- /End Modal-Body -->
@@ -302,7 +302,7 @@
                                         <ul>
                                             <li>一、認知與接受條款
                                                 <ol>
-                                                    <li>邑元聯合法律事務（下稱本事務所）所係依據本服務條款提供法律管家(https://.com)服務(以下稱本服務)，服務條款將涵蓋您所有使用本服務的行為，包括本文所列規範及隱私權政策所載的條文（包括根據該隱私權政策使用及處理您提供的個人資訊及內容）。服務條款為您與本律師事務所之間的委任契約，當您使用本服務或時完成付費手續時，即表示您已閱讀、瞭解並同意接受本服務條款之所有內容，並完全接受本服務現有與未來衍生的服務項目及內容，成為此具有約束力之合約中的一方。</li>
+                                                    <li>邑元聯合法律事務所（下稱本事務所）係依據本服務條款提供法律管家(https://www.lawbutler.co)服務(以下稱本服務)，服務條款將涵蓋您所有使用本服務的行為，包括本文所列規範及隱私權政策所載的條文（包括根據該隱私權政策使用及處理您提供的個人資訊及內容）。服務條款為您與本律師事務所之間的委任契約，當您使用本服務或時完成付費手續時，即表示您已閱讀、瞭解並同意接受本服務條款之所有內容，並完全接受本服務現有與未來衍生的服務項目及內容，成為此具有約束力之合約中的一方。</li>
                                                     <li>若您為未滿二十歲之未成年人，應於您的家長（或監護人）閱讀、瞭解並同意本服務條款之所有內容及其後修改變更後，方得註冊為會員、使用本服務或繼續使用本服務。當您使用或繼續使用本服務時，即視為您的家長（或監護人）已閱讀、瞭解並同意接受本服務條款之所有內容及其後修改變更。</li>
                                                     <li>本事務所有權於任何時間修改或變更本服務條款之內容，修改後的服務條款內容將公佈網站上，也可能選擇使用您提供給我們的電子郵件地址發送變更通知，建議您隨時注意該等修改或變更，我們也將盡力就變更原因做出說明。您可自行決定是否接受更新後的條款或停止使用我們的服務，若您不同意任何修改或變更後之內容，應明白告知本事務所終止服務關係，否則即視為已閱讀、瞭解並同意接受該等修改或變更且願意受其拘束。</li>
                                                     <li>您同意於使用本服務之所有內容，皆得以電子文件作為正式表示方法，您使用本服務，包含但不限於在各項服務與功能等頁面點選同意或確認或付款等功能鍵或行為時，視為您正式表示之同意。</li>
@@ -504,7 +504,7 @@
                                 <ul class="pricing-features">
                                     <li>視訊諮詢 3 次/年</li>
                                     <li>電話一對一諮詢 4 hr/年</li>
-                                    <li>契約審閱（限中文） <br>1 年 4 頁內免費<span>（一般非公版收費 8000 元/份）</span></li>
+                                    <li>契約審閱（限中文） <br>1 年 4 頁內免費<span>（一般非公版收費 12000 元/份）</span></li>
                                     <li>函件撰擬審閱（限中文） <br>2 份/年 2 頁內免費<span>（一般非公版收費 8000 元/份）</span></li>
                                     <li>一般收費 9 折計價</li>
                                     <li>&nbsp;</li>
@@ -540,7 +540,7 @@
                                     <li>視訊諮詢 7 次/年</li>
                                     <li>電話一對一諮詢 12 hr/年</li>
                                     <li>到府諮詢 1 次（新竹以北地區）</li>
-                                    <li>契約審閱（限中文） <br>1 年 4 頁內免費<span>（一般非公版收費 1200 元/份）</span></li>
+                                    <li>契約審閱（限中文） <br>1 年 4 頁內免費<span>（一般非公版收費 12000 元/份）</span></li>
                                     <li>函件撰擬審閱（限中文） <br>2 份/年 5 頁內免費<span>（一般非公版收費 8000 元/份）</li>
                                     <li>一般收費 8 折計價</li>
                                 </ul>
