--- a/Price/price.html
+++ b/Price/price.html
@@ -504,8 +504,8 @@
                                 <ul class="pricing-features">
                                     <li>視訊諮詢 3 次/年</li>
                                     <li>電話一對一諮詢 4 hr/年</li>
-                                    <li>契約審閱（限中文） <br>1 年 4 頁內免費<span>（一般非公版收費 12000 元/份）</span></li>
-                                    <li>函件撰擬審閱（限中文） <br>2 份/年 2 頁內免費<span>（一般非公版收費 8000 元/份）</span></li>
+                                    <li>契約審閱（限中文） <br>1 年 4 頁內免費<span>（非公版收費 12000 元/份）</span></li>
+                                    <li>函件撰擬審閱（限中文） <br>2 份/年 2 頁內免費<span>（非公版收費 8000 元/份）</span></li>
                                     <li>一般收費 9 折計價</li>
                                     <li>&nbsp;</li>
                                 </ul>
@@ -522,8 +522,8 @@
                                 <ul class="pricing-features">
                                     <li>視訊諮詢 5 次/年</li>
                                     <li>電話一對一諮詢 8 hr/年</li>
-                                    <li>契約審閱（限中文） <br>1 年 4 頁內免費<span>（一般非公版收費 1200 元/份）</span></li>
-                                    <li>函件撰擬審閱（限中文） <br>2 份/年 2 頁內免費<span>（一般非公版收費 8000 元/份）</li>
+                                    <li>契約審閱（限中文） <br>1 年 4 頁內免費<span>（非公版收費 12000 元/份）</span></li>
+                                    <li>函件撰擬審閱（限中文） <br>2 份/年 2 頁內免費<span>（非公版收費 8000 元/份）</li>
                                     <li>一般收費 9 折計價</li>
                                     <li>&nbsp;</li>
                                 </ul>
@@ -540,8 +540,8 @@
                                     <li>視訊諮詢 7 次/年</li>
                                     <li>電話一對一諮詢 12 hr/年</li>
                                     <li>到府諮詢 1 次（新竹以北地區）</li>
-                                    <li>契約審閱（限中文） <br>1 年 4 頁內免費<span>（一般非公版收費 12000 元/份）</span></li>
-                                    <li>函件撰擬審閱（限中文） <br>2 份/年 5 頁內免費<span>（一般非公版收費 8000 元/份）</li>
+                                    <li>契約審閱（限中文） <br>1 年 4 頁內免費<span>（非公版收費 12000 元/份）</span></li>
+                                    <li>函件撰擬審閱（限中文） <br>2 份/年 5 頁內免費<span>（非公版收費 8000 元/份）</li>
                                     <li>一般收費 8 折計價</li>
                                 </ul>
                                 <a class="btn btn-color"  id="12999project" data-toggle="modal" href="#provisionModal" onclick="ga('send','event','lawbutler','click','12999_project');">點我全方位保護</a>
