--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <meta name="keywords" content="法律管家 一對一視訊諮詢 專屬預算客製規劃 法律社群串聯 文件線上快速審閱" />
     <meta name="author" content="法律管家團隊">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta property="og:title" content="法律管家"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="http://www.lawbutler.co/"/>
+    <meta property="og:site_name" content="專屬於你的法律服務"/>
+
 
     <!-- FAVICON  -->
     <link rel="icon" href="assets/images/favicon/smart.jpg">
