--- a/Price/price.html
+++ b/Price/price.html
@@ -10,6 +10,7 @@
     <meta name="keywords" content="法律管家 一對一視訊諮詢 專屬預算客製規劃 文件線上快速審閱" />
     <meta name="author" content="法律管家團隊">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="og:description" content="根據預算選擇方案，也可以針對您的需求設計貼身方案，輕鬆擁有專屬的法律管家" />
     <meta property="og:title" content="法律管家"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="http://www.lawbutler.co/Price/price.html"/>
