--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="法律管家 一對一視訊諮詢 專屬預算客製規劃 法律社群串聯 文件線上快速審閱" />
     <meta name="author" content="法律管家團隊">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="og:description" content="創新的法律服務，讓律師更了解你的實際需求，持續規劃量身打造的方案，讓你精準依照需求，每人都擁有專屬的律師管家" />
+    <meta property="og:description" content="創新的法律服務，讓律師更了解你的實際需求，持續規劃量身打造的方案，讓你精準依照需求，每人都擁有專屬的律師管家" />
     <meta property="og:title" content="法律管家"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="http://www.lawbutler.co/"/>
