--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="http://www.lawbutler.co/"/>
     <meta property="og:site_name" content="專屬於你的法律服務"/>
+    <meta property="og:image" content="http://www.lawbuter.co/assets/images/hammer.png"/>
 
 
     <!-- FAVICON  -->
