--- a/Price/price.html
+++ b/Price/price.html
@@ -15,6 +15,7 @@
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="http://www.lawbutler.co/Price/price.html"/>
     <meta property="og:site_name" content="專屬於你的法律服務"/>
+    <meta property="og:image" content="http://www.lawbutler.co/assets/images/hammer.png"/>
 
     <!-- FAVICON  -->
     <link rel="icon" href="assets/images/favicon/smart.jpg">
