--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- TITLE OF SITE -->
     <title>法律管家</title>
 
-    <meta name="description" content="創新的法律服務，讓律師更了解你的實際需求，持續規劃量身打造的方案，讓你精準依照需求，每人都擁有專屬的律師管家
+    <meta name="description" content="創新的法律服務，讓律師更了解你的實際需求，持續規劃量身打造的方案，讓你精準依照需求，每人都擁有專屬的法律管家
 " />
     <meta name="keywords" content="法律管家 一對一視訊諮詢 專屬預算客製規劃 法律社群串聯 文件線上快速審閱" />
     <meta name="author" content="法律管家團隊">
