--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="big5">
 
     <!-- TITLE OF SITE -->
+    <meta name="google-site-verification" content="SF6kq2LZ-Hb6IVinVCZDBfP_LhpAR8hxx4MLykmwjaI" />
     <title>法律管家</title>
 
     <meta name="description" content="創新的法律服務，讓律師更了解你的實際需求，持續規劃量身打造的方案，讓你精準依照需求，每人都擁有專屬的法律管家
