--- a/Price/price.html
+++ b/Price/price.html
@@ -4,6 +4,7 @@
     <meta charset="big5">
 
     <!-- TITLE OF SITE -->
+    <meta name="google-site-verification" content="SF6kq2LZ-Hb6IVinVCZDBfP_LhpAR8hxx4MLykmwjaI" />
     <title>法律管家-設計您的專屬方案</title>
 
     <meta name="description" content="根據預算選擇方案，也可以針對您的需求設計貼身方案，輕鬆擁有專屬的法律管家" />
